src/tests/snapshots/niri__tests__window_opening__check_target_size@dwU-wfsAN.snap
---
source: src/tests/window_opening.rs
description: "want fullscreen: AN\nconfig:\nwindow-rule {\n    default-column-width {  }\n}"
expression: snapshot
---
initial configure:
size: 0 × 688, bounds: 1248 × 688, states: []

post-map configures:
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen]
size: 1280 × 720, bounds: 1248 × 688, states: [Fullscreen, Activated]

unfullscreen configure:
size: 1 × 688, bounds: 1248 × 688, states: [Activated]
